@@ -12,6 +12,8 @@ Stable versions
 	- add OpenBSD sndio driver (by Thomas Pfaff)
 	- fix memory leak: free extra pattern allocated by the XM loader
 	- fix memory leak: free header and filename when file is invalid
+	- fix buffer overflow in OXM and DTT loaders (reported by Luigi
+	  Auriemma)
 
 2.5.1 (20071207): 11 years after xmp 0.09a, the first public release!
 	- fix Winamp plugin default sampling rate (reported by Mirko Buffoni)
